--- a/.github/workflows/Rockchip-OpenWrt-Local.yml
+++ b/.github/workflows/Rockchip-OpenWrt-Local.yml
@@ -3,7 +3,7 @@ name: Rockchip OpenWrt
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 16 * * 1
+    - cron: 0 16 * * 4
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -20,8 +20,8 @@ env:
 
 jobs:
   Build:
-    runs-on: ubuntu-22.04
-    # runs-on: self-hosted
+    # runs-on: ubuntu-22.04
+    runs-on: self-hosted
     timeout-minutes: 720
 
     steps:
@@ -39,29 +39,6 @@ jobs:
         echo -e "$(sudo lshw -short -C memory | grep GiB)\n"
         echo "--------------------------硬盘信息--------------------------"
         echo "硬盘数量: $(ls /dev/sd* | grep -v [1-9] | wc -l)" && df -hT
-
-    - name: Initialization Environment
-      env:
-        DEBIAN_FRONTEND: noninteractive
-      run: |
-        #docker rmi $(docker images -q)
-        sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android $AGENT_TOOLSDIRECTORY
-        sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
-        sudo -E apt-get -y update
-        sudo -E apt-get -y install python2 && \
-          pip install pyelftools
-        sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
-        sudo -E systemctl daemon-reload
-        sudo -E apt-get -y autoremove --purge
-        sudo -E apt-get -y clean
-        sudo timedatectl set-timezone "$TZ"
-
-    - name: Combine Disks
-      uses: easimon/maximize-build-space@master
-      with:
-        swap-size-mb: 1024
-        temp-reserve-mb: 100
-        root-reserve-mb: 1024
 
     - name: Checkout
       uses: actions/checkout@main
@@ -116,7 +93,7 @@ jobs:
         chmod +x $GITHUB_WORKSPACE/scripts/*.sh
         chmod +x $DIY_SCRIPT
         cd $OPENWRT_PATH
-        sudo python2 $GITHUB_WORKSPACE/scripts/get-pip.py
+        # sudo python2 $GITHUB_WORKSPACE/scripts/get-pip.py
         $GITHUB_WORKSPACE/$DIY_SCRIPT
         $GITHUB_WORKSPACE/scripts/preset-clash-core.sh $CLASH_KERNEL
         $GITHUB_WORKSPACE/scripts/preset-terminal-tools.sh
