--- a/configs/armv8-plus.config
+++ b/configs/armv8-plus.config
@@ -1151,6 +1151,7 @@ CONFIG_PACKAGE_ruby-forwardable=y
 CONFIG_PACKAGE_ruby-io-console=y
 CONFIG_PACKAGE_ruby-io-wait=y
 CONFIG_PACKAGE_ruby-json=y
+CONFIG_PACKAGE_ruby-optparse=y
 CONFIG_PACKAGE_ruby-ostruct=y
 CONFIG_PACKAGE_ruby-pstore=y
 CONFIG_PACKAGE_ruby-psych=y
