update go version

--- a/.github/workflows/Rockchip-OpenWrt-Local.yml
+++ b/.github/workflows/Rockchip-OpenWrt-Local.yml
@@ -1,4 +1,4 @@
-name: Rockchip OpenWrt
+name: Rockchip OpenWrt Local
 
 on:
   workflow_dispatch:
@@ -82,7 +82,7 @@ jobs:
       run: |
         cd $OPENWRT_PATH
         ./scripts/feeds update -a
-        rm -rf feeds/packages/lang/golang && git clone https://github.com/sbwml/packages_lang_golang -b 23.x feeds/packages/lang/golang
+        rm -rf feeds/packages/lang/golang && git clone https://github.com/sbwml/packages_lang_golang -b 24.x feeds/packages/lang/golang
         ./scripts/feeds install -a
 
     - name: Load Custom Configuration
