--- a/configs/armv8-plus.config
+++ b/configs/armv8-plus.config
@@ -821,7 +821,7 @@ CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-minidlna=y
 CONFIG_PACKAGE_luci-app-mjpg-streamer=y
 CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-msd_lite=y
+# CONFIG_PACKAGE_luci-app-msd_lite=y
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
@@ -955,7 +955,7 @@ CONFIG_PACKAGE_mmc-utils=y
 CONFIG_PACKAGE_modemmanager=m
 CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_msd_lite=y
+# CONFIG_PACKAGE_msd_lite=y
 CONFIG_PACKAGE_mt7601u-firmware=y
 CONFIG_PACKAGE_mt7921bt-firmware=y
 CONFIG_PACKAGE_mt7922bt-firmware=y
